--- a/index.html
+++ b/index.html
@@ -6,52 +6,6 @@
 </head>
 
 <body>
-
-<nav>
-    <ul>
-        <div class="navbar">
-            <li class="navlogo"> 
-                <img src="assets/logo.png" class="navlogoimage">
-            </li>
-
-            <li class="navitem"> 
-                <a href="" class="navtext"> About </a> 
-            </li>
-
-            <li class="navitem"> 
-                <a href="" class="navtext"> Contact </a> 
-            </li>
-
-            <li class="navitem"> 
-                <a href="" class="navtext"> Gallery </a> 
-            </li>
-        </div>
-    </ul>
-
-</nav>
-
-    <div class = "firstgallery">
-        <img src="assets/office.png" class="firstimage">
-    </div>
-
-    <div class="first-panel">
-        <div class="content-block image-main">
-            <img src="assets/happyworker.png" id="panel-image">
-        </div>
-
-        <div class="content-block text-anchorage">
-            <h2> We are happy in this place </h2>
-            <p> This is a great place to work in (please trust us) </p>
-            <br><br><br><br><br><br><br><br><br><br><br><br>
-            
-            <a href="" id="button-link">
-            <button class="button" id="readmore-button"> 
-                Read more!
-            </button>
-            </a> 
-        </div>
-    </div>
-
+    <a href="contact/main.html"> contact page </a>
 </body>
-
 </html>
