--- a/contact/1.html
+++ b/contact/1.html
@@ -7,7 +7,7 @@
 
 <body>
 <!-- This is meant to be the contacts page -->
-    <div class="termsconditions slidenormal">
+    <div class="termsconditions slidefast">
         <div class="termsconditions_container">
             <div class="termswarning">
                 <p>Our site uses tracking technologies, like cookies, to offer you a better experience, personalize content and ads, and to analyze and improve our site performance. Use the buttons to the right to provide your online data processing preferences.
@@ -38,7 +38,7 @@
 
     <nav class="navbar">
         <div class="navbar_container">
-            <a href="1.html" id="navbar_logo">placeholders</a>
+            <a href="2.html" id="navbar_logo">placeholders</a>
             <ul class="navbar_menu">
                 <li class="navbar_item">
                     <a href="" class="navbar_links">Home</a>
@@ -108,16 +108,16 @@
 
                 <div class="social_icons">
                     <a href="" class="social_icon-link" target="_blank">
-                        <img src="../assets/socials/facebook.svg" class="social_media_icon">
+                        <img src="assets/socials/facebook.svg" class="social_media_icon">
                     </a>
                     <a href="" class="social_icon-link" target="_blank">
-                        <img src="../assets/socials/instagram.svg" class="social_media_icon">
+                        <img src="assets/socials/instagram.svg" class="social_media_icon">
                     </a>
                     <a href="" class="social_icon-link" target="_blank">
-                        <img src="../assets/socials/youtube.svg" class="social_media_icon">
+                        <img src="assets/socials/youtube.svg" class="social_media_icon">
                     </a>
                     <a href="" class="social_icon-link" target="_blank">
-                        <img src="../assets/socials/x.svg" class="social_media_icon">
+                        <img src="assets/socials/x.svg" class="social_media_icon">
                     </a>
                 </div>
             </div>
