--- a/corridor/2Fc2rlpXHjx.html
+++ b/corridor/2Fc2rlpXHjx.html
@@ -8,13 +8,13 @@
 <body>
     <div class="poem">
         <div class="about">
-        <p> A specialised, talented group of individuals <span class="hidden">with rather humble beginnings, starting from ground zero. It shouldn't have been this way</span>. Gifted with the knowledge to provide and satisfy customers with incredible, sensational entertainment <span class="hidden">cultivated through years of experience, following inspirations from around the world, doing what we love and basing our art off of the people we look up to. It shouldn't have been this way</span>. Our main goal is to inspire people around the world using our extremely versatile collection of services, no matter who or where you are <span class="hidden">but it's all for the money, money, money, that's what happened that's where it lead to it's where it always leads to. It shouldn't have been this way.</span></p>
+        <p> A specialised, talented group of individuals <span class="hidden">with rather humble beginnings, starting from ground zero. It shouldn't have been this way</span>. Gifted with the knowledge to provide and satisfy customers with incredible, sensational entertainment <span class="hidden">cultivated through years of experience, following inspirations from around the world, doing what we love and basing our art off of the people we look up to. It shouldn't have been this way</span>. Our main goal is to inspire people around the world using our extremely versatile collection of services, no matter who or where you are <span class="hidden">but it's all for the money, money, money, that's what happened that's where it lead to it's where it always leads to. It shouldn't have been this way.</span></p> <br>
 
-        <p>Unyielding, but successfully adapting to the requests of our customers as well as the trends that keep the world<span class="hidden"> stuck at large, failing to experiment, preventing it from</span>. Spinning!.</p>
+        <p>Unyielding, but successfully adapting to the requests of our customers as well as the trends that keep the world<span class="hidden"> stuck at large, failing to experiment, preventing it from</span>. Spinning!.</p> <br>
 
-        <p>We are the placeholders<span class="hidden">phony phony phony phony phony</span>, keen, digital artists who LOVE to create, no matter the time period. Automated programmed statistical specially processed <span class="hidden">fraudulent</span> material boasting <span class="hidden">non-</span>extraordinary <span class="hidden">non-</span>monumental <span class="hidden">NOT</span>innovative productions for our esteemed customers! </p>
+        <p>We are the placeholders<span class="hidden">phony phony phony phony phony</span>, keen, digital artists who LOVE to create, no matter the time period. Automated programmed statistical specially processed <span class="hidden">fraudulent</span> material boasting <span class="hidden">non-</span>extraordinary <span class="hidden">non-</span>monumental <span class="hidden">NOT</span>innovative productions for our esteemed customers! </p> <br>
 
-        <p>We love artists like you!<span class="hidden">don't fall for it don't don't don't. </span>Where does your journey start?</p>
+        <p>We love artists like you!<span class="hidden">don't fall for it don't don't don't. </span>Where does your journey start?</p> <br>
 
         <p>Ours starts <a href="../gallery.html"> here!</a> </p>
 
