--- a/gallery/two.html
+++ b/gallery/two.html
@@ -2,10 +2,69 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_two.css">
 </head>
 
 <body>
-    <a href="one.html"> walk through the gallery (0) </a>
+    <div class="navbar">
+        <ul class="navbar_container">
+            <li class="nav_logo">placeholders</li>
+            <li class="nav_contents">Home</li>
+            <li class="nav_contents">About</li>
+            <li class="nav_contents">Gallery</li>
+            <li class="nav_contents">Contact</li>
+        </ul>
+    </div>
+
+    <div class="row">
+        <div class="column">
+            <img class="small" src="../assets/tinypicerror.png">
+            <img class="small" src="../assets/tinypicerror.png">
+            <img class="long" src="../assets/tinypicerror.png">
+            <img class="small" src="../assets/tinypicerror.png">
+            <img class="large" src="../assets/tinypicerror.png">
+            <img class="small" src="../assets/tinypicerror.png">
+        </div>
+
+        <div class="column">
+            <img class="small" src="../assets/tinypicerror.png">
+            <img class="medium" src="../assets/tinypicerror.png">
+            <img class="small" src="../assets/tinypicerror.png">
+            <img class="medium" src="../assets/tinypicerror.png">
+            <img class="small" src="../assets/tinypicerror.png">
+            <img class="large" src="../assets/tinypicerror.png">
+        </div>
+
+        <div class="column">
+            <img class="large" src="../assets/tinypicerror.png">
+            <img class="long" src="../assets/tinypicerror.png">
+            <img class="medium" src="../assets/tinypicerror.png">
+            <img class="medium" src="../assets/tinypicerror.png">
+            <img class="small" src="../assets/tinypicerror.png">
+            <img class="small" src="../assets/tinypicerror.png">
+        </div>
+
+        <div class="column">
+            <img class="small" src="../assets/tinypicerror.png">
+            <img class="medium" src="../assets/tinypicerror.png">
+            <img class="small" src="../assets/tinypicerror.png">
+            <img class="medium" src="../assets/tinypicerror.png">
+            <img class="small" src="../assets/tinypicerror.png">
+            <img class="small" src="../assets/tinypicerror.png">
+        </div>
+
+        <div class="column">
+            <img class="small" src="../assets/tinypicerror.png">
+            <img class="small" src="../assets/tinypicerror.png">
+            <img class="medium" src="../assets/tinypicerror.png">
+            <img class="small" src="../assets/tinypicerror.png">
+            <img class="long" src="../assets/tinypicerror.png">
+            <img class="medium" src="../assets/tinypicerror.png">
+        </div>
+    </div>
+
+    <div class="index">
+        <p>on page 2 of 3 <a href="one.html"><img src="../assets/orangearrow.gif"></a> </p>
+    </div>
 </body>
 </html>
