--- a/gallery/one.html
+++ b/gallery/one.html
@@ -2,10 +2,36 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_one.css">
 </head>
 
 <body>
-    <a href="../pipeline/3oYa86n2cez.html"> the exhibition ends here </a>
+</style>
+
+<body>
+
+    <div class="television_set">
+        <div class="tv_image">
+            
+        </div>
+
+        <div class="television">
+            <table>
+            <tr>
+                <td width="415px" height="225px" id="top-left"></td>
+                <td width="122px" id="top-right"> 
+                    <a href="" id="top_button">&#129089 enter</a> 
+                </td> 
+            </tr>
+            <tr>
+                <td height="130px" id="bottom-left"></td>
+                <td id="bottom-right">
+                    <a href="one/home.html" id="bottom_button">&#129091 search</a> 
+                </td>
+            </tr>
+        </table>
+        </div>
+    </div>
+    
 </body>
 </html>
