--- a/home.html
+++ b/home.html
@@ -5,7 +5,73 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<style>
+    body {
+        background: rgb(89, 89, 88);
+    }
+    
+    table {
+        width: 100%;
+    }
+
+    li {
+        font-size: 1.2rem;
+        margin-top: 5%;
+        text-align: left;
+        list-style: none;
+    }
+
+    td {
+        padding: 5px 5px;
+        vertical-align: top;
+        text-align: left;
+    }
+
+    table, td {
+        border: 1px solid black;
+    }
+</style>
+
 <body>
-    <a href="about.html"> the grand finale </a>
+    <table>
+        <tr>
+            <td width="80%" height="80px" bgcolor="gray">
+                <img src="assets/2002/logo.png" width="25%">
+            </td>
+            <td width="20%" height="80px" bgcolor="gray">
+                <p style="color:aliceblue">Welcome to placeholders.com, where we share some of our artwork!
+                </p>
+            </td>
+        </tr>
+    </table>
+    <table bgcolor="#E0E0D7">
+        </tr>
+        <tr>
+            <td width="15%" height="500px" bgcolor="gray">
+                <ul>
+                    <li > <a href="home.html" style="color:aliceblue">Home</a></li>
+                    <li> <p style="color:black">Art Gallery (UNDER CONSTRUCTION)</p></li>
+                    <li> <p style="color:black">About Us (UNDER CONSTRUCTION)</p></li>
+                    <li> <p style="color:black">Email (UNDER CONSTRUCTION)</p></li>
+                </ul>
+>
+            </td>
+
+            <td width="60%">
+                <table bgcolor="orange">
+                    <tr height="20px" >
+                        <td>Welcome to our humble abode!</td>
+                    </tr>
+                </table >
+                <img src="assets/under_construction.gif"><img src="assets/under_construction.gif"><img src="assets/under_construction.gif"><img src="assets/under_construction.gif"><img src="assets/under_construction.gif"><img src="assets/under_construction.gif"><img src="assets/under_construction.gif"><img src="assets/under_construction.gif">
+                <h1>Hey there!</h1>
+                <p>Thank you for visiting our home page, we're a duo of artists just trying to get by. We particularly like using digital technologies, and are excited to learn more about designing websites!</p>
+
+                <p>As you can tell, our website is far from complete and we've been hard at work trying to display our works in here (short films, artworks, silly stuff). We currently only have this page, so definitely a lot of work to do!</p>
+
+                <p>Apologies for the empty space! We'll upload our work and implement a newspage soon!!!</p>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
