--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <link rel="stylesheet" href="style.css">
-</head>
+<style>
+    .fakelink {
+        color:blue;
+        text-decoration: underline;
+        cursor: pointer;
+    }
+</style>
 
 <body>
-    <a href="contact/main.html"> contact page </a>
+    <h1> placeholders.com </h1>
+    <p>placeholders.com was an artistic website hosted by the now-defunct commission studio <span class="fakelink">"Placeholders"</span>. (stylised to be in lowercase)</p>
+    <p>Everything left to see of the Placeholders is linked directly or indirectly to this website, including the <a href="contact/main.html"> latest snapshot archive</a> of the website before it was taken down. It is strongly advised that new users read the prompts below before attempting to access the archive.</p>
+    <dl>
+        <dt><a href="archivers_notes/overview.html">What's out there?</a></dt>
+        <dd>General information on the website, context</dd>
+        <dt><a href="archivers_notes/help.html">Help</a></dt>
+        <dd>on how to navigate the website.</dd>
+        <dt><a href="archivers_notes/history.html">History</a></dt>
+        <dd>Learn about the history of the website and its company.</dd>
+        <dt><a href="archivers_notes/contributors.html">How can I help?</a></dt>
+        <dd>If you would like to support our archival efforts.</dd>
+    </dl>
 </body>
 </html>
