--- a/gallery/one/art.html
+++ b/gallery/one/art.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="television_set">
-        <div class="tv_image about">
+        <div class="tv_image art">
             
         </div>
 
@@ -20,13 +20,13 @@
             <tr>
                 <td width="415px" height="225px" id="top-left"></td>
                 <td width="122px" id="top-right"> 
-                    <a href="../../about.html" id="top_button" target="_blank">&#129089 enter</a> 
+                    <a href="../../pipeline/3oYa86n2cez.html" id="top_button" target="_blank">&#129089 enter</a> 
                 </td> 
             </tr>
             <tr>
                 <td height="130px" id="bottom-left"></td>
                 <td id="bottom-right">
-                    <a href="art.html" id="bottom_button">&#129091 search</a> 
+                    <a href="../one.html" id="bottom_button">&#129091 search</a> 
                 </td>
             </tr>
         </table>
