--- a/archivers_notes/fin.html
+++ b/archivers_notes/fin.html
@@ -22,7 +22,7 @@
 
 <body>
     <div class="center">
-        <img src="../assets/2002/us.jpg">
+        <img src="../archives/2004/assets/us.jpg">
         <p>fin</p>
     </div>
 </body>
