--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1> placeholders.com </h1>
     <p>placeholders.com was an artistic website hosted by the now-defunct commission studio <span class="fakelink">"Placeholders"</span>. (stylised to be in lowercase)</p>
-    <p>Everything left to see of the Placeholders is linked directly or indirectly to this website, including the <a href="contact/main.html"> latest snapshot archive</a> of the website before it was taken down. It is strongly advised that new users read the prompts below before attempting to access the archive.</p>
+    <p>Everything left to see of the Placeholders is linked directly or indirectly to this website, including the <a href="archives/2010s/contact.html"> latest snapshot archive</a> of the website before it was taken down. It is strongly advised that new users read the prompts below before attempting to access the archive.</p>
     <dl>
         <dt><a href="archivers_notes/overview.html">What's out there?</a></dt>
         <dd>General information on the website, context</dd>
