--- a/archivers_notes/gallery.html
+++ b/archivers_notes/gallery.html
@@ -14,7 +14,7 @@
     <p>We have tried restoring the gallery page to the best of our ability, but alongside the rest of the site, the image links have been lost to time.</p>
     <p>To this day, we still cannot find the artworks produced by the placeholders.</p>
 
-    <a href="../gallery/two.html" style ="
+    <a href="../archives/2009/gallery.html" style ="
         margin: 10px 0;
         padding: 5px 50px;
         text-align: center;
