--- a/archivers_notes/help.html
+++ b/archivers_notes/help.html
@@ -12,6 +12,6 @@
 <body>
     <h1>Help</h1>
     <p>The snapshot has been corrupted / hacked / vandalised beyond recovery, we have a hard time navigating the site as well.</p>
-    <p>The snapshot begins in what could have been the 'Contact Us' page of the website, but does not appear to have any working links. Users have reported that <a href="../assets/logo.png" target="_blank">clicking on the logo for 5 pages</a> leads to new areas of the website. Whether you choose to believe in this or not is completely up to <a href="../contact/main.html">you.</a> </p>
+    <p>The snapshot begins in what could have been the 'Contact Us' page of the website, but does not appear to have any working links. Users have reported that <a href="../archives/2010s/assets/logo.png" target="_blank">clicking on the logo for 5 pages</a> leads to new areas of the website. Whether you choose to believe in this or not is completely up to <a href="../archives/2010s/contact.html">you.</a> </p>
 </body>
 </html>
