--- a/archivers_notes/notices/warning.html
+++ b/archivers_notes/notices/warning.html
@@ -7,7 +7,7 @@
 
 <body>
     <h6>this site is not for you.</h6>
-    <a href="../archives/2010s/corrupted/08_18.html" style ="
+    <a href="../../archives/2010s/corrupted/08_18.html" style ="
         margin: 10px 0;
         padding: 5px 50px;
         text-align: center;
