--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 
+<!-- 
+    Inline CSS as this is the only styling I'll be using 
+    The rest of the pages from the archivers_notes folder are the same way as well, as they are relatively simple.
+-->
+
+<!--
+    'fakelink' is for aesthetic purposes only. I realised I couldn't emulate the look of the first website without them
+-->
 <style>
     .fakelink {
         color:blue;
